# StudyLens

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  StudyLens.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/: studylens.db
desktop/: package-lock.json  package.json  tsconfig.json
desktop/assets/: doc-exams-prompt.html  doc-exams-prompt.js
desktop/src/: capture.ts  main.ts  preload.ts
docs/: architecture.md
extension/: package-lock.json  package.json  tsconfig.json
extension/public/: manifest.json  options.html  popup.html  styles.css
extension/scripts/: build-extension.mjs
extension/src/: api.ts  background.ts  chrome.d.ts  content.ts  options.ts  pageContext.ts  popup.ts  storage.ts  types.ts
extension/tests/: api.test.mjs  pageContext.test.mjs
scripts/: docker-entrypoint.sh  push_user_browser_state.py  refresh_browser_state.py  save_browser_state.py
src/studylens/: __init__.py  bootstrap.py  catalog.py  cli.py  config.py  errors.py
tests/: test_adaptive.py  test_api.py  test_auth_store.py  test_auto_index.py  test_browser_session.py  test_captions.py  test_cli.py  test_config.py  test_course_store.py  test_discovery.py  test_documents.py  test_domain.py  test_edstem_agent.py  test_edstem_indexer.py  test_exams_agent.py  test_exams_indexer.py  test_external_parsers.py  test_generation.py  test_llm_extractor.py  test_panopto.py  test_panopto_agent.py  test_retrieval.py  test_scientia.py
web/: package-lock.json  package.json
web/public/: index.html  styles.css
web/scripts/: build-web.mjs  serve.mjs
(+48 files in other folders)
