[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "studylens"
version = "0.1.0"
description = "Course ingestion, retrieval, and study generation for Imperial students."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.102.0",
  "beautifulsoup4>=4.12",
  "claude-agent-sdk>=0.1.81",
  "fastapi>=0.110",
  "httpx>=0.27",
  "openai>=1.40",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "qdrant-client>=1.12",
  "typer>=0.12",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
]
documents = [
  "pypdf>=4.3",
]
browser = [
  "playwright>=1.46",
]

[project.scripts]
studylens = "studylens.cli:app"
studylens-save-browser-state = "studylens.tools.browser_state:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]
